[package]
name = "dvornaw"
version = "0.1.0"
authors = ["Wesley Chaffin <wchaffin@ucsd.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "^0.6.0"
wasm-bindgen = "^0.2.50"
serde = "1.0.104"
getrandom = {version = "0.1.14", wasm-bindgen = true}
lazy_static = "1.4.0"
